# loyal-cli

./: Cargo.toml  MIRROR_SOURCE.md
cli/loyal-cli/: Cargo.toml  README.md
cli/loyal-cli/src/: cli.rs  commands.rs  config.rs  identity.rs  main.rs  squads.rs  transaction_diagnostics.rs  transfers.rs
cli/private-transfers-cli/: Cargo.toml  README.md
cli/private-transfers-cli/src/: cli.rs  commands.rs  constants.rs  pda.rs  solana_ops.rs
cli/smart-accounts-cli/: Cargo.toml  README.md
cli/smart-accounts-cli/src/: cli.rs  commands.rs  identity.rs  main.rs
cli/smart-accounts-cli/tests/: cli.rs
