[package]
name = "loyal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loyal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.5.7", features = ["derive"] }
bs58 = "0.5.1"
clap = { version = "4.5.26", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
solana-account-decoder-client-types = "2.3.13"
solana-address-lookup-table-interface = "2.2.2"
solana-client = "2.3.13"
solana-compute-budget-interface = "2.2.2"
solana-commitment-config = "2.2.1"
solana-rpc-client-api = "2.3.13"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
spl-associated-token-account-client = "2.0.0"
spl-token = "8.0.0"
tempfile = "3.16.0"
url = "2.5.8"
urlencoding = "2.1.3"
