[package]
name = "smart-accounts-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loyal-smart-accounts"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-sdk = "2.3.1"
tempfile = "3.16.0"
